[package]
name = "fast_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
nom = "7.1.3"
string-interner = "0.14.0"
trace = "0.1.7"
unwrap = "1.2.1"
vec1 = "1.10.1"
